Reorganização de Activities Função "buscarMaterias" do WS alterada para a activity MateriasTest MainActivity agora gerencia o acesso as outras activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="teste">TESTE</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_materia_test">MateriaTestActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_test">TestActivity</string>
 </resources>
