CheckBox criados dinamicamente para cada materia, dentro de um ScrollView e LienarLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_test">TestActivity</string>
+    <string name="title_activity_usuario_test">UsuarioTestActivity</string>
 </resources>
