--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="title_activity_resposta_test">RespostaTest</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_apresentacao">ApresentacaoActivity</string>
 
 </resources>
