--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,17 @@
     <string name="title_activity_duvida_test">Suas Dúvidas</string>
     <string name="title_activity_test">TestActivity</string>
 
-    <string name="wstcc">http://192.168.167.132:8080/</string>
+    <string name="wstcc">http://192.168.43.4:8080/</string>
     <string name="title_activity_resposta_test">RespostaTest</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_apresentacao">ApresentacaoActivity</string>
+    <string name="title_activity_feed_duvidas">FeedDuvidasActivity</string>
+
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="title_activity_nova_duvida_test">NovaDuvidaTestActivity</string>
 
 </resources>
