--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,14 +7,20 @@
     <string name="title_activity_usuario_test">Criar nova conta</string>
     <string name="title_activity_duvida_test">Suas Dúvidas</string>
     <string name="title_activity_resposta_test">Titulo da Dúvida</string>
-    <string name="title_activity_test">TestActivity</string>
-
-    <string name="wstcc">http://192.168.167.132:8080/</string>
-
+    <string name="title_activity_nova_duvida_test">Criar uma nova Dúvida</string>
+    <string name="title_activity_main_navigation">androidtcc</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_apresentacao">Apresentacao Activity</string>
     <string name="title_activity_feed_duvidas">Feed de Dúvidas</string>
 
-    <string name="title_activity_nova_duvida_test">Criar uma nova Dúvida</string>
+    <string name="wstcc">http://192.168.167.132:8080/</string>
+
+    <string-array name="navigation_drawer_items_array">
+        <item>Meu Perfil</item>
+        <item>Minhas Matérias</item>
+        <item>Configurações</item>
+    </string-array>
+
+    <string name="hello_world">Hello world!</string>
 
 </resources>
