Correção de mensagem de erro ao tentar curtir uma resposta. Incluido a activty de atualização de informações de usuário.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Example action</string>
+    <string name="title_activity_perfil_usuario">PerfilUsuarioActivity</string>
 
 </resources>
