--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="title_activity_main_navigation">androidtcc</string>
     <string name="title_activity_apresentacao">Apresentacao Activity</string>
     <string name="title_activity_feed_duvidas">Feed de Dúvidas</string>
+    <string name="title_activity_perfil_usuario">Meu Perfil</string>
 
     <string name="wstcc">http://openwstcc-devbr.rhcloud.com/rest/</string>
 
@@ -30,6 +31,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Example action</string>
-    <string name="title_activity_perfil_usuario">PerfilUsuarioActivity</string>
 
 </resources>
